--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -7,9 +7,64 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
+    <meta http-equiv="x-ua-compatible" content="ie-edge"/>
+    <link href="../../css/bootstrap.css"
+          th:href="@{/css/bootstrap.css}"
+          rel="stylesheet" type="text/css"/>
     <title>hello</title>
 </head>
 <body>
-  测试
+测试
+<pre>
+<code>
+    一、选择题（题型注释）
+
+    1．已知集合M={x|x2﹣3x﹣4≥0}，N={x|﹣3≤x＜3}，则M∩N=（ ）
+    A．[﹣3，﹣1] B．[﹣1，3）
+    C．（﹣∞，﹣4] D．（﹣∞，﹣4]∪[1，﹣3）
+</code>
+    </pre>
+<div class="row">
+    派生到我的代码片
+
+    <form id="uploadForm" action="upload" th:action="@{/upload}" method="post" enctype="multipart/form-data">
+        <table>
+            <tr>
+                <td>文件</td>
+                <td><input type="file" name="file" id="file"/></td>
+            </tr>
+            <tr>
+                <td colspan="2" align="center">
+                    <button type="button" onclick="doUpload()">上传</button>
+                    <button type="button" onclick="hide('upload')">返回</button>
+                </td>
+            </tr>
+        </table>
+    </form>
+</div>
+<p>
+    <a class="btn btn-danger" href="save" th:href="@{/save}"> 保存 查看</a></p>
+
+<script src="../../js/jquery.js"
+        th:src="@{/js/jquery.js}"
+        type="text/javascript"></script>
+<script>
+    function doUpload() {
+
+        $.ajax({
+            type: "POST",
+            url: 'upload',
+            data: $('#uploadForm').serialize(),
+            cache: false,
+            enctype: 'multipart/form-data',     //  ok
+            async:false,
+            success: function (data) {
+                if ("success" == data.msg){
+                    alert("hjh")
+                }
+            }
+        });
+    }
+</script>
 </body>
 </html>
