ajax 方式 上传文件 oK

--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -35,7 +35,7 @@
             </tr>
             <tr>
                 <td colspan="2" align="center">
-                    <button type="submit" >上传</button>
+                    <button type="button" onclick="doUpload()">上传</button>
                     <button type="button" onclick="hide('upload')">返回</button>
                 </td>
             </tr>
@@ -50,18 +50,19 @@
         type="text/javascript"></script>
 <script>
     function doUpload() {
-
+    var formDate=new FormData($('#uploadForm')[0]);
         $.ajax({
             type: "POST",
             url: 'upload',
-            data: $('#uploadForm').serialize(),
+//            data: $('#uploadForm').serialize(),
+            data:formDate,
             cache: false,
             enctype: 'multipart/form-data',     //  ok
             async:false,
-            processData: false,
-            contentType: false,
+//            processData: false,
+//            contentType: false,
             success: function (data) {
-                if ("success" == data.msg){
+                if ("success" == data.info){
                     alert("hjh")
                 }
             }
