--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -24,50 +24,68 @@
     C．（﹣∞，﹣4] D．（﹣∞，﹣4]∪[1，﹣3）
 </code>
     </pre>
-<div class="row">
-    派生到我的代码片
+<div class="row text-center" style="padding: 20px;padding-left: 50px;margin-top: 50px">
+
 
     <form id="uploadForm" action="upload" th:action="@{/upload}" method="post" enctype="multipart/form-data">
         <table>
             <tr>
-                <td>文件</td>
-                <td><input type="file" name="file" id="file"/></td>
+                <td>选择文件 :</td>
+                <td><input class="btn btn-info" type="file" name="file" id="file"/></td>
             </tr>
+
             <tr>
-                <td colspan="2" align="center">
-                    <button type="button" onclick="doUpload()">上传</button>
-                    <button type="button" onclick="hide('upload')">返回</button>
+                <td colspan="2" align="center" style="padding-top: 50px">
+                    <button class="btn btn-success" type="button" onclick="doUpload()">上传</button>
+                    <button class="btn btn-danger" type="button" onclick="clear_file()">清空</button>
                 </td>
             </tr>
         </table>
     </form>
+    <p><a class="btn btn-danger" href="save" th:href="@{/save}"> 保存 查看</a></p>
+
 </div>
-<p>
-    <a class="btn btn-danger" href="save" th:href="@{/save}"> 保存 查看</a></p>
 
 <script src="../../js/jquery.js"
         th:src="@{/js/jquery.js}"
         type="text/javascript"></script>
 <script>
+    function clear_file() {
+        var file = document.getElementById("file");
+//        obj.outerHTML=obj.outerHTML;
+        if (file.outerHTML) {
+            file.outerHTML = file.outerHTML;
+        } else {
+            file.value = "";
+        }
+//         way2
+//        $('#file').select();
+//        document.selection.clear();
+
+    }
+
     function doUpload() {
-    var formDate=new FormData($('#uploadForm')[0]);
+        var formDate = new FormData($('#uploadForm')[0]);
         $.ajax({
             type: "POST",
             url: 'upload',
 //            data: $('#uploadForm').serialize(),
-            data:formDate,
-            dataType:'json',
+            data: formDate,
+            dataType: 'json',
             cache: false,
             enctype: 'multipart/form-data',     //  ok
-            async:false,
+            async: false,
             processData: false,
             contentType: false,
             success: function (data) {
-                if ("success" == data.info){
-                    alert("hjh")
-                }else {
+                if ("success" == data.info) {
+                    alert("上传成功,跳转到解析后页面");
+
+
+                } else {
                     alert(data.info)
                 }
+                window.location = "documents";
             }
         });
     }
