--- a/src/main/webapp/WEB-INF/templates/index.html
+++ b/src/main/webapp/WEB-INF/templates/index.html
@@ -42,7 +42,10 @@
             </tr>
         </table>
     </form>
-    <p><a class="btn btn-danger" href="save" th:href="@{/save}"> 保存 查看</a></p>
+    <p>
+        <a class="btn btn-danger"  th:href="@{/documents}"> 查看String 内容 </a>
+        <a class="btn btn-danger" href="documents" th:href="@{/documents}"> 查看Html 内容</a>
+    </p>
 
 </div>
 
