--- a/src/main/webapp/WEB-INF/templates/documents.html
+++ b/src/main/webapp/WEB-INF/templates/documents.html
@@ -32,7 +32,7 @@
                 </thead>
                 <tbody th:each="WordToHtml : ${documents}" th:object="${WordToHtml}">
                 <tr >
-                    <td><pre th:text="*{{content}}" >test</pre></td>
+                    <td><pre th:text="*{{content}}"   >test</pre></td>
 
 
                 </tr>
@@ -40,7 +40,8 @@
                     <td>
                         <div class="row">
 
-                                <iframe  style="width:100%; height: 1000px " th:src="*{{htmlContentPath}}"
+                                <iframe  style="margin:0 auto;width:100%; height: 1000px " src=""
+                                         th:src="*{{htmlContentPath}}"
                                 ></iframe>
 
                         </div>
